Added documentation for account routes.
